--- a/src/index.css
+++ b/src/index.css
@@ -3,24 +3,25 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   text-align: center;
-  float: left;
-  padding: 5px;
+  padding: 7px;
   margin: 10px;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(238, 7, 161, 0.404);
   border-radius: 20px;
   opacity: 0.9;
   color: purple;
   border-color: purple;
   border: 1 px solid purple;
+  transform: scale(1.09);
+  overflow: hidden;
 }
 .overflow {
   overflow: hidden;
 }
-.card-img-top {
-  transform: scale(1);
+.card-img-top:hover {
+  transform: scale(1.2);
   transition: transform 0.5s ease;
 }
