--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,23 @@
   transform: scale(1.2);
   transition: transform 0.5s ease;
 }
+.card-title {
+  font-family: "Dancing Script", cursive;
+  margin-top: 20px;
+}
+.card-heading {
+  font-family: "Abril Fatface", cursive;
+}
+.btn-light {
+  color: #fff;
+}
+.btn-light:hover {
+  color: #fff !important;
+  background-color: purple !important;
+  border-color: purple !important;
+}
+.btn {
+  font-size: 0.9rem !important;
+  line-height: 1 !important;
+  border-radius: 0.65rem !important;
+}
