--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,17 @@
-.card {
-  /* Add shadows to create the "card" effect */
+.card1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   text-align: center;
   padding: 7px;
-  margin: 10px;
 }
 
 /* On mouse-over, add a deeper shadow */
-.card:hover {
+.card1:hover {
   box-shadow: 0 8px 16px 0 rgba(238, 7, 161, 0.404);
-  border-radius: 20px;
   opacity: 0.9;
   color: purple;
   border-color: purple;
   border: 1px solid purple;
-  transform: scale(1.09);
   overflow: hidden;
 }
 .overflow {
@@ -28,8 +24,11 @@
 .card-title {
   font-family: "Dancing Script", cursive;
   margin-top: 20px;
+  padding-top: 10px;
 }
 .card-heading {
+  padding-bottom: 20px;
+  height:50px;
   font-family: "Abril Fatface", cursive;
 }
 
